fix learndash coures grid alignments

--- a/themes/bootscore-child/theme_components/scss/_bootscore-custom.scss
+++ b/themes/bootscore-child/theme_components/scss/_bootscore-custom.scss
@@ -328,10 +328,12 @@ hr {
         @media (min-width: 768px) {
         .alignleft {
             float: left;
+            padding-right: 1em;
         }
         
         .alignright {
             float: right;
+            padding-left: 1em;
         }
     }
 }
