--- a/themes/bootscore-child/theme_components/scss/_ce_learndash.scss
+++ b/themes/bootscore-child/theme_components/scss/_ce_learndash.scss
@@ -78,7 +78,7 @@ body {
  
 .ce-courses .ld-course-list-content .ld-course-list-items .ld_course_grid article .caption {
     padding: 1em 1.25em;
-    justify-content: space-between;
+    //justify-content: space-between;
 
     .entry-title {
         font-size: 1.2em;
@@ -87,11 +87,16 @@ body {
     .entry-content {
         font-size: .85em;
         color: $ce-grey;
+        flex: 1; //make this div fill the available space, pushing button down to bottom of container
     }
 
     .ld_course_grid_button {
         padding-top: 1.5em;
     }
+}
+
+.learndash-course-grid .items-wrapper.grid .item .content .entry-content {
+    margin: unset;
 }
 
 /*--------------------------------------------------------------
